--- a/00_ROA/RobotArm/NlinkPendulum.tex
+++ b/00_ROA/RobotArm/NlinkPendulum.tex
@@ -5,8 +5,7 @@
 %where you can also make suggestions and rate matlab2tikz.
 %
 \definecolor{mycolor1}{rgb}{0.06600,0.44300,0.74500}%
-\definecolor{mycolor2}{rgb}{0.86600,0.32900,0.00000}%
-\definecolor{mycolor3}{rgb}{0.12941,0.12941,0.12941}%
+\definecolor{mycolor2}{rgb}{0.12941,0.12941,0.12941}%
 %
 \begin{tikzpicture}
 
@@ -15,52 +14,39 @@ width=0.951\figW,
 height=0.419\figH,
 at={(0\figW,0.581\figH)},
 scale only axis,
-xmin=4,
-xmax=24,
+bar shift auto,
+xmin=1.6,
+xmax=26.4,
 xtick={ 4,  6,  8, 10, 12, 14, 16, 18, 20, 22, 24},
-ymode=log,
-ymin=0.1,
-ymax=100000,
-yminorticks=true,
-ylabel style={font=\color{mycolor3}},
-ylabel={Solver time [s]},
+ymin=0,
+ymax=90,
+ylabel style={font=\color{mycolor2}},
+ylabel={Relative improvment in solve time in percent},
 axis background/.style={fill=white},
+axis x line*=bottom,
+axis y line*=left,
 xmajorgrids,
 ymajorgrids,
-yminorgrids,
-legend style={at={(0.03,0.97)}, anchor=north west, legend cell align=left, align=left}
+legend style={legend cell align=left, align=left}
 ]
-\addplot [color=mycolor1, line width=1.0pt, mark=o, mark options={solid, mycolor1}]
-  table[row sep=crcr]{%
-4	0.252955000000001\\
-6	0.758756799999998\\
-8	2.2164693\\
-10	8.44355089999999\\
-12	29.3393798000001\\
-14	74.6133297\\
-16	179.851265300001\\
-18	504.7897717\\
-20	1032.41588\\
-22	2318.01819009999\\
-24	5811.65797019999\\
+\addplot[ybar, bar width=1.6, fill=mycolor1, draw=mycolor2, area legend] table[row sep=crcr] {%
+4	80.4266662539802\\
+6	26.6406484608838\\
+8	28.7440375148791\\
+10	11.2985033977873\\
+12	30.8188430073692\\
+14	51.321440634858\\
+16	67.1412966970301\\
+18	65.8353516994445\\
+20	62.265147626029\\
+22	82.3135726727546\\
+24	84.1506361664627\\
 };
-\addlegendentry{sequential}
-
-\addplot [color=mycolor2, line width=1.0pt, mark=triangle, mark options={solid, mycolor2}]
-  table[row sep=crcr]{%
-4	1.292345\\
-6	1.0343014\\
-8	3.11057380000001\\
-10	9.51906249999998\\
-12	42.4094956999999\\
-14	153.277604500001\\
-16	547.347421599998\\
-18	1477.5207614\\
-20	2735.9743448\\
-22	13106.1980309\\
-24	36668.0835347\\
+\addplot[forget plot, color=mycolor2] table[row sep=crcr] {%
+1.6	0\\
+26.4	0\\
 };
-\addlegendentry{coordinate-descent}
+\addlegendentry{Mean value}
 
 \end{axis}
 
@@ -69,70 +55,41 @@ width=0.951\figW,
 height=0.419\figH,
 at={(0\figW,0\figH)},
 scale only axis,
-xmin=4,
-xmax=24,
+bar shift auto,
+xmin=1.6,
+xmax=26.4,
 xtick={ 4,  6,  8, 10, 12, 14, 16, 18, 20, 22, 24},
-xlabel style={font=\color{mycolor3}},
+xlabel style={font=\color{mycolor2}},
 xlabel={Number of states},
-ymin=5,
-ymax=50,
-ylabel style={font=\color{mycolor3}},
-ylabel={Iterations [-]},
-axis background/.style={fill=white},
-xmajorgrids,
-ymajorgrids,
-legend style={at={(0.03,0.97)}, anchor=north west, legend cell align=left, align=left}
-]
-\addplot [color=mycolor1, line width=1.0pt, mark=o, mark options={solid, mycolor1}]
-  table[row sep=crcr]{%
-4	7\\
-6	9\\
-8	9\\
-10	10\\
-12	11\\
-14	10\\
-16	9\\
-18	10\\
-20	11\\
-22	10\\
-24	11\\
-};
-\addlegendentry{sequential}
-
-\addplot [color=mycolor2, line width=1.0pt, mark=triangle, mark options={solid, mycolor2}]
-  table[row sep=crcr]{%
-4	23\\
-6	15\\
-8	17\\
-10	16\\
-12	23\\
-14	26\\
-16	29\\
-18	33\\
-20	28\\
-22	32\\
-24	50\\
-};
-\addlegendentry{coordinate-descent}
-
-\end{axis}
-
-\begin{axis}[%
-width=1.227\figW,
-height=1.227\figH,
-at={(-0.16\figW,-0.135\figH)},
-scale only axis,
-xmin=0,
-xmax=1,
 ymin=0,
-ymax=1,
-axis line style={draw=none},
-ticks=none,
+ymax=80,
+ylabel style={font=\color{mycolor2}},
+ylabel={Relative improvment in iterations in percent},
+axis background/.style={fill=white},
 axis x line*=bottom,
 axis y line*=left,
 xmajorgrids,
 ymajorgrids,
 legend style={legend cell align=left, align=left}
 ]
+\addplot[ybar, bar width=1.6, fill=mycolor1, draw=mycolor2, area legend] table[row sep=crcr] {%
+4	69.5652173913043\\
+6	40\\
+8	47.0588235294118\\
+10	37.5\\
+12	52.1739130434783\\
+14	61.5384615384615\\
+16	68.9655172413793\\
+18	69.6969696969697\\
+20	60.7142857142857\\
+22	68.75\\
+24	78\\
+};
+\addplot[forget plot, color=mycolor2] table[row sep=crcr] {%
+1.6	0\\
+26.4	0\\
+};
+\addlegendentry{Mean value}
+
 \end{axis}
 \end{tikzpicture}%
